Fix spacing issue on menu
node/20481

--- a/docroot/sites/all/themes/blank/sass/screen.sass
+++ b/docroot/sites/all/themes/blank/sass/screen.sass
@@ -78,7 +78,7 @@ td
     color: #fff
     font-size: 1.6em
     font-weight: 100
-    margin: 0 80px 4px 0
+    margin: 0 80px 5px 0
     text-decoration: none
 
 nav
